# cap

./: .gitignore  CMakeLists.txt  Makefile  README.md  cap.h  cap.mm  cap_macos.cpp  cap_windows.cpp  clipboard.hpp  clipboard.mm  clipboard_windows.cpp  filedialog.cpp  filedialog.hpp  filedialog_macos.mm  filedialog_windows.cpp  imgproc.cpp  imgproc.hpp  main.cpp  minipkg.cmake  minipkg.py  transparent_window.h  transparent_window.mm
